2008-01-25  Chris Lord  <chris@openedhand.com>

	* gtk-im/immultipress.c:
	Don't conflict with matchbox-im-invoker/multipress

	* src/multitap-pad-main.c: (main):
	Fix '5' key, various unimportant bits

2008-01-25  Chris Lord  <chris@openedhand.com>

	* data/im-multipress.conf:
	Add keys for capital letters

2008-01-25  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (hide_window_idle), (hide_window),
	(show_window), (invoke_cb), (main):
	Add button 1 to the buttons list, delay hiding the keypad slightly so
	that quick hide/shows won't cause flickering

2008-01-24  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (change_mode), (alt_keypress_timeout),
	(button_press_event_cb), (button_release_event_cb), (new_button),
	(main):
	Replace the non-working caps toggle key with a working mode-switcher
	key, implement three modes (normal, caps, alt), change button text
	when switching modes, don't use g_timeout_add_seconds (what was I
	thinking?!)

2007-11-06  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (main):
	Change layout slightly, add a 'forward' key

2007-11-06  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (new_button):
	Use an image packed into a button instead of the stock button

2007-11-06  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (screen_size_changed_cb), (main):
	Fix landscape orientation, add non-working --position option, change
	--plug option to --xembed

2007-11-06  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (screen_size_changed_cb), (main):
	Add arguments --daemon, --orientation and --plug, set default
	orientation to portrait

2007-11-06  Chris Lord  <chris@openedhand.com>

	* gtk-im/Makefile.am:
	* gtk-im/Makefile.in:
	* gtk-im/gtkimcontextmultipress.c: (mb_im_context_focus_in),
	(mb_im_context_focus_out), (gtk_im_context_multipress_class_init):
	* gtk-im/im-context.c:
	* gtk-im/im-context.h: