@@ -1,6 +1,7 @@
 [keys]
-KP_0 = +;=;/;\;
-KP_1= .;,;-;?;!;@;:;(;)
+
+KP_0 = +;=;/;\\
+KP_1 = .;,;-;?;!;@;:;(;)
 KP_2 = a;b;c;2
 KP_3 = d;e;f;3
 KP_4 = g;h;i;4
